--- a/movie rating.css
+++ b/movie rating.css
@@ -59,12 +59,12 @@ main{
     box-shadow: 0 4px 5px rgb(66, 53, 53);
     position: relative;
     overflow: hidden;
-    border-radius: 50px;
+    border-radius: 80px;
 }
 
 .movie img{
     width: 100%;
-    border-radius: 50px;
+    border-radius: 0px;
     opacity: 0.7;
 }
 
@@ -111,7 +111,7 @@ main{
     bottom: 0;
     max-height: 100%;
     transform: translateY(100%);
-    overflow-y: auto;
+    overflow-y: scroll;
     transition: transform 0.3s ease-in;
 }
 
